<resources>
    <string name="app_name">FlashBulbMob</string>
    <string name="can_start_button">Start</string>
    <string name="cannot_start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="torch_repeater_label">Torch Repeater</string>
    <string name="boundaries_label">Times must be between MIN and MAX</string>
    <string name="on_millis_label">ON millis</string>
    <string name="off_millis_label">OFF millis</string>
</resources>
